cli/tests/snapshots/main__formatting@header-6.md.snap
---
source: cli/tests/main.rs
expression: formatted
input_file: cli/tests/files/markdown/header-6.md
---
###### Hello world

