cli/tests/snapshots/main__formatting@heading-4.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/heading/heading-4.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
#### Hello world

-----------------------------------end input------------------------------------
|                                                                              | printWidth

