cli/tests/snapshots/main__formatting@heading-5.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/heading/heading-5.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
##### Hello world

-----------------------------------end input------------------------------------
|                                                                              | printWidth

