cli/tests/snapshots/main__formatting@heading-mixed.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/heading/heading-mixed.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
## Example - An example heading (<a href="https://example.com">https://example.com</a>)

-----------------------------------end input------------------------------------
|                                                                              | printWidth

