cli/tests/snapshots/main__formatting@heading-paragraph.md.snap
---
source: cli/tests/main.rs
expression: "format!(\"{}{}\", header, formatted)"
input_file: cli/tests/files/markdown/integration/heading-paragraph.md
---
|                                                                              | printWidth
=====================================input======================================

